[package]
name = "nix-olde"
version = "0.2.0"
edition = "2021"
license = "MIT"

# to upgrade
# cargo upgrade
# or
# cargo upgrade --incompatible
[dependencies]
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
env_logger = { version = "0", features = [] }
gethostname = "0"
log = { version = "0", features = [] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "2"
